Wrap position:absolute in position:relative and rearrange the components so the buttons disply correctly

--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -60,6 +60,10 @@ $Base-posOffset: $med + 1;
   position: static !important;
 }
 
+.u-posOverlay {
+  z-index: 5;
+}
+
 /**
  * Used to adjust the default spacing between components
  * Use with great care!
